--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,159 @@
-body {
+*,
+*::before,
+*::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --navbar-color: #252835;
+  --home-bg: #3d4151;
+  --bluedark-100: #1B2033;
+  --bluedark-50: #1C2C44;
+  --white: #FDFDFD;
+  --bluelight: #00B6DE;
+  --bluelight-50: #036FC0;
+  --color-primary: hsl(var(--bluedark-100));
+
+  --container-width-lg: 80%;
+  --container-width-md: 90%;
+
+  transition: all 500s ease;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
+  line-height: 1.7;
+
+  /* 
+  color: 
+  #252835
+  background: #3d4151;
+  */
+}
+
+.container {
+  width: var(--container-width-lg);
+  max-width: 1920px;
+  margin-inline: auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.2;
+  color: var(--white);
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+a {
+  color: var(--white)
+}
+
+img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+}
+
+
+.btn-get {
+  color: var(--white);
+  width: fit-content;
+  margin: 0 auto;
+  padding: 0.9rem 2rem;
+  background: var(--bluelight);
+  border-radius: 1.5rem;
+  transition: var(--transition);
+}
+
+.btn-get.lg {
+  border: none;
+  padding: 1rem 1rem;
+  border-radius: 0.3rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
+.btn-get.sm {
+  padding: 0.4rem 1.2rem;
+  font-size: 0.9rem;
+}
+
+.btn-get.sm:hover {
+  background: var(--bluedark-50);
+}
+
+
+
+
+
+
+section {
+  margin-top: 10rem;
+  background: var(--bluedark-100);
+}
+
+
+
+.section__head {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+/*.section__head span {
+  background: var(--bluelight);
+  padding: 0.8rem;
+  border-radius: 1rem;
+  color: var(--white);
+  font-size: 1.5rem;
+}*/
+
+
+
+
+
+.card {
+  background: var(--bluedark-50);
+  border: 2px solid var(--bluelight);
+  text-align: center;
+  padding: 3rem 2rem;
+  /*border-radius: 0 3rem 0 3rem;*/
+}
+
+.card span {
+  width: 3rem;
+  height: 3rem;
+  background: red;
+  color: var(--bluelight);
+  font-size: 1.5rem;
+  padding: 0.8rem;
+  display: grid;
+  place-items: center;
+  margin-bottom: 1.5rem;
+  margin-inline: auto;
+  /* border-radius: 1rem;*/
+
+
+}
+
+.card small {
+  margin-top: 1rem;
+  display: block;
+  font-weight: 300;
 }
