--- a/src/pages/smartenergy/SmartEnergy.css
+++ b/src/pages/smartenergy/SmartEnergy.css
@@ -4,7 +4,7 @@
     height: calc(100vh - 3rem);
     place-items: center;
     /* margin-top: 3rem;*/
-    background-color: var(--home-bg);
+    background-color: var(--white);
 }
 
 .main__section-container {
@@ -21,17 +21,19 @@
     /* mover os itens para cima h2*/
 }
 
-.main__section-left h4 {
+/*
+.main__section-left h1 {
     margin-bottom: 1rem;
     font-weight: 400;
     color: var(--bluelight);
-}
+}*/
 
+/*
 .main__section-left p {
     margin: 1rem 0 3.5rem;
     font-size: 1.1rem;
     color: var(--white);
-}
+}*/
 
 .main__section-right {
     display: grid;
@@ -41,4 +43,79 @@
 
 .main__section-image {
     position: relative;
+}
+
+
+.main__header-right .title-energy {
+    color: #115678;
+    font-size: 2.4rem;
+    font-weight: 500;
+}
+
+.main__header-right .paragrafh-energy {
+    color: #373737;
+    font-size: 1.3rem;
+    font-weight: 400;
+    margin-top: 1.8rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.right-r {
+    display: flex;
+    flex-direction: column;
+    /* flex: 1 1;
+    gap: 1;
+    text-transform: none;
+    /*background: red;*/
+    margin: 1.3rem 5rem 0 0;
+}
+
+.right-r span {
+    font-weight: bold;
+    color: #373737;
+    font-size: 1.3rem;
+}
+
+.right-r>div {
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.details-r {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    /* 1rem*/
+}
+
+.details-r>div {
+    display: flex;
+    font-size: 1rem;
+    gap: 1rem;
+}
+
+
+.details-r div .icons {
+    font-size: 1.2rem;
+    color: var(--bluelight-50);
 }
