--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -5,7 +5,6 @@
     place-items: center;
     margin-top: 3rem;
     background-color: var(--bluedark-100);
-    /*#1b2033*/
 }
 
 .main__header-container {
@@ -19,13 +18,6 @@
 
 .main__header-left {
     margin-top: -3rem;
-    /* mover os itens para cima h2*/
-}
-
-.main__header-left h4 {
-    margin-bottom: 1rem;
-    font-weight: 400;
-    color: var(--bluelight);
 }
 
 .main__header-left p {
@@ -41,38 +33,82 @@
 }
 
 .main__header-image {
+    position: absolute;
+}
+
+.main__section {
+    background: var(--white);
+}
+
+.main__section-container {
+    display: grid;
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: space-between;
+    gap: 6rem;
+}
+
+.main__section-left {
+    margin-top: -3rem;
+}
+
+.main__section-right {
+    display: grid;
+    place-items: center;
+    position: relative;
+}
+
+.main__section-image {
     position: relative;
 }
 
 
-
-
-/* Programs*/
-.programs {
-    margin-top: 4rem;
+.main__header-right .title-energy {
+    color: #115678;
+    font-size: 2.4rem;
+    font-weight: 600;
 }
 
-.programs__wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
-    margin-top: 4rem;
+.main__header-right .paragrafh-energy {
+    color: #373737;
+    font-size: 1.3rem;
+    font-weight: 400;
+    margin-top: 1.8rem;
 }
 
-.programs__program a {
-    margin-top: 2.5rem;
+.right-r {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    margin: 1.3rem 5rem 4rem 0;
 }
 
+.right-r span {
+    position: relative;
+    font-weight: bold;
+    color: #373737;
+    font-size: 1.3rem;
+    margin-left: 2.6rem;
 
+}
 
+.details-r {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
+.details-r>div {
+    display: flex;
+    font-size: 1rem;
+    gap: 1rem;
+}
 
-
-
-/* values */
+.details-r div .icons {
+    position: absolute;
+    font-size: 1.3rem;
+    color: var(--bluelight-50);
+}
 
 .values__container {
     display: grid;
@@ -82,28 +118,17 @@
 
 .values__paragrafh {
     display: flex;
-
     flex-direction: column;
-    /*align-items: center;*/
     justify-content: center;
     margin-top: 14rem;
     width: 33rem;
-    /*32rem */
     padding: 1rem 1rem;
-    /* background: green;
-
-
-
-
-    /*margin: 1.5rem 0 5rem;*/
-    /*background-color: aqua;*/
 }
 
 .values__title {
     text-transform: uppercase;
     font-size: 2rem;
     margin-bottom: 2.5rem;
-
 }
 
 .values__span {
@@ -135,42 +160,72 @@
 
 .values__right .icon-values {
     width: 10rem;
-    /*font-size: 7rem;*/
 }
 
 .values__wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem 2rem;
-    /* 3.4rem 2.4rem*/
     padding-bottom: 10rem;
 }
 
-
-
-
-
-/* monitoring*/
-.main__header-right .title-monitory {
-    color: #115678;
+.main__header-right.monitory_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    padding: 3rem 1rem;
+    width: 40rem;
 }
 
+.main__header-right .title-monitory {
+    text-transform: uppercase;
+    color: #1b2033;
+    font-size: 2.1rem;
+    border-bottom: 4px solid var(--bluelight);
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+}
 
+.monitory_container .paragrafh-monitory {
+    color: #1b2033;
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+}
 
+.monitory_container p {
+    font-size: 1.2rem;
+    color: #373737;
+    font-weight: 400;
+}
 
+.right-r.monitory {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 38rem;
+    margin-bottom: 3rem;
+}
 
+.right-r .details-r.monitory {
+    display: grid;
+    grid-template-columns: 5fr 5fr 5fr 5fr;
+    gap: 2rem 2rem;
+    padding-top: 2rem;
+}
 
+.details-r.monitory .span__monitory {
+    font-size: 0.9rem;
+    margin-top: 5.4rem;
+    font-weight: 500;
+}
 
-
-
-
-
-
-
-
-
-/*   development*/
-
+.details-r.monitory .icons.monitory {
+    position: absolute;
+    align-items: center;
+    color: #1c2c44;
+    width: 5rem;
+}
 
 .section__develop {
     background: #f4f4f4;
@@ -179,10 +234,9 @@
 
 .section__title-develop {
     margin-bottom: 1rem;
-    font-weight: 600;
+    font-weight: 700;
     color: #1c2c44;
-    font-size: 2rem;
-
+    font-size: 2.1rem;
 }
 
 .right-r.dev {
@@ -190,69 +244,31 @@
 }
 
 .right-r .details-r.develop {
-
     border-top: 4px solid var(--bluelight);
-    padding-top: 2rem;
-    /*background: #52e0ff;*/
+    padding-top: 2.3rem;
 }
 
 .details-r.develop .icons.develop {
     color: #1c2c44;
     font-size: 1.3rem;
+    margin-bottom: 0.6rem;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* consult*/
 .section__consult {
-    /* display: grid;
-    width: 100vw;
-    height: calc(100vh - 3rem);
-    place-items: center;
-    margin-top: 3rem;*/
     background-color: var(--bluedark-50);
-
-    /*#1c2c44*/
 }
 
 .section__consult-container {
     display: flex;
     height: 100%;
-    /*grid-template-columns: 1fr 1fr;*/
     align-items: center;
     justify-content: center;
-    /* gap: 1rem;*/
 }
 
 .section__left {
-
     width: 45%;
-
     text-align: center;
-    /* background-color: #52e0ff;*/
-
     margin: 5rem 0 3rem 0;
-
-    /* mover os itens para cima h2*/
 }
 
 .section__left h1 {
@@ -264,40 +280,14 @@
     padding-bottom: 2rem;
 }
 
-/*.section__left p {
-    margin: 1rem 0 3.5rem;
-    font-size: 1.1rem;
-    color: var(--white);
-}*/
-
 .section__left .btn.consult {
     width: auto;
     padding: 10px 10px;
     margin-left: 10rem;
 }
 
-/*.main__header-right {
-    display: grid;
-    place-items: center;
-    position: relative;
-}
-
-.main__header-image {
-    position: relative;
-}*/
-
-
-
-
-
-
-
-/* questions FAQs*/
-
-
 .faqs {
     background: var(--white);
-
 }
 
 .faqs__container .title__question {
@@ -316,17 +306,14 @@
     align-items: center;
     gap: 1.5rem 5rem;
     margin-top: 4rem;
-    /*background: #52e0ff;*/
 }
 
 .faq {
-    /*background: red;*/
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
     width: 70%;
-
 }
 
 .faq div {
@@ -345,7 +332,6 @@
 .faq .question_faq {
     color: var(--bluedark-50);
     font-size: 1.1rem;
-
 }
 
 .faq p {
@@ -355,4 +341,241 @@
     color: #373737;
     font-weight: 300;
     font-size: 1.1rem;
+}
+
+footer {
+    background: var(--bluedark-50);
+    margin-top: 7rem;
+    padding-top: 7rem;
+    font-size: 0.9rem;
+    color: var(--white);
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: 23rem 1fr 1fr 1fr;
+    gap: 2rem;
+}
+
+.footer__container article {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.footer__container article h4 {
+    margin-bottom: 0.6rem;
+    font-size: 1.3rem;
+    color: var(--bluelight);
+}
+
+.footer__container article p {
+    align-items: center;
+    padding-top: 0.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.footer__socials {
+    display: flex;
+    align-items: center;
+    margin-top: 1.5rem;
+    gap: 1rem;
+}
+
+.footer__socials a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background: var(--bluelight);
+    color: var(--white);
+    padding: 0.8rem;
+    font-size: 1.9rem;
+    border-radius: 50%;
+    transition: 0.2s ease-in-out;
+    transition: all 1s;
+}
+
+.footer__socials a:hover {
+    opacity: 0.6;
+    transition: all 1s;
+}
+
+.footer__copyright {
+    display: flex;
+    justify-content: space-around;
+    padding: 1.5rem 0;
+    border-top: 1.5px solid var(--white);
+    margin-top: 5rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+}
+
+.footer__copyright .footer_p {
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .main__header {
+        height: fit-content;
+        padding: 12rem 0;
+    }
+
+    .main__header-container {
+        gap: 0;
+    }
+
+    .main__section-container {
+        grid-template-columns: 1fr;
+        justify-content: center;
+        gap: 4rem;
+    }
+
+    .main__section-image {
+        display: none;
+    }
+
+    .values__container {
+        grid-template-columns: 1fr;
+        justify-content: center;
+        gap: 4rem;
+    }
+
+    .values__wrapper {
+        gap: 4rem 3rem;
+    }
+
+    .right-r .details-r.monitory {
+        grid-template-columns: 2fr 2fr;
+    }
+
+    .main__header-image.dev {
+        display: none;
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 4rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .main__header {
+        margin-top: 0;
+        padding: 12rem 0 0;
+        height: 100vh;
+    }
+
+    .main__header-image {
+        display: none;
+    }
+
+    .main__header-container {
+        grid-template-columns: 1fr;
+    }
+
+    .values__wrapper {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .values__paragrafh {
+        padding: 7rem;
+        margin-top: 0;
+
+    }
+
+    .values__title {
+        font-size: 2rem;
+    }
+
+    .values__span {
+        font-size: 1.7rem;
+    }
+
+    .values__right {
+        margin: 0;
+    }
+
+    .card.values__value {
+        width: 44%;
+        margin-inline: auto;
+    }
+
+    .main__header-right.monitory_container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        padding: 10rem;
+    }
+
+    .right-r .details-r.monitory {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
+    .details-r.monitory .span__monitory {
+
+        margin-right: 20rem;
+        font-size: 1.2rem;
+        padding: 1.3rem;
+        border: 2px solid #115678;
+    }
+
+    .section__develop {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        padding: 0;
+    }
+
+    .main__header.section__develop {
+
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        padding: 0;
+        padding: 2rem;
+        margin-bottom: 0;
+    }
+
+    .section__title-develop {
+        padding: 1.5rem;
+        margin-top: 1rem;
+    }
+
+    .section__left h1 {
+        font-size: 1.5rem;
+    }
+
+    .section__left .btn.consult {
+        display: block;
+        margin-left: 0;
+        padding: 0 10px;
+    }
+
+    .faqs__wrapper {
+        gap: 1rem;
+        margin-top: 3rem;
+    }
+
+    footer {
+        margin-top: 7rem;
+    }
+
+    .footer__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    .footer__container article {
+        align-items: center;
+    }
+
+    .footer__container article p {
+        text-align: center;
+        padding: 1.4rem;
+    }
 }
